# bigrig

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
lib/: CMakeLists.txt
src/: CMakeLists.txt  adjustment.hpp  cli.cpp  cli.hpp  clioptions.cpp  clioptions.hpp  dist.cpp  dist.hpp  errors.hpp  exceptions.hpp  io.cpp  io.hpp  iterator.hpp  main.cpp  model.cpp  model.hpp  node.cpp  node.hpp  period.hpp  rng.hpp  split.cpp  split.hpp  spread.hpp  tree.cpp  tree.hpp  util.hpp
tests/src/: CMakeLists.txt  adjust.cpp  dist.cpp  model.cpp  node.cpp  period.cpp  split.cpp  tree.cpp
